--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
-      - run:
-          command: yarn test
-          name: Run tests
+      # - run:
+      #     command: yarn test
+      #     name: Run tests
       - run:
           command: yarn build
           name: Build app
